fixed some bugs

--- a/TimeTable2.html
+++ b/TimeTable2.html
@@ -35,14 +35,14 @@
     </style>
 </head>
 <body>
-<h1 style="text-align: center;width:100%">برنامه زمانبندی کلاس ها</h1>
+<h1 style="text-align: center;width:100%">برنامه زمانبندی کلاس ها با بازه های 2 ساعته</h1>
 <table class="main" style="width:100%; height: 100%">
     <tr>
-        <th>15:30-17:00</th>
-        <th>14:00-15:30</th>
-        <th>10:30-12:00</th>
-        <th>9:00-10:30</th>
-        <th>7:30-9:00</th>
+        <th>17:30-19:30</th>
+        <th>15:30-17:30</th>
+        <th>13:30-15:30</th>
+        <th>10:30-12:30</th>
+        <th>8:30-10:30</th>
         <th></th>
     </tr>
     <tr id = "0shanbeh">
